# swe-pruner-mcp

./: LICENSE  README.md  flake.nix  pyproject.toml
src/swe_pruner_mcp/: __init__.py  logger.py  server.py
tests/: test_service.py
