[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-pruner-mcp"
version = "0.1.0"
description = "MCP server for SWE-Pruner context-aware code pruning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "kirksw" }
]
license = { text = "MIT" }
keywords = [
  "mcp",
  "model-context-protocol",
  "code-pruning",
  "llm",
  "anthropic",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "mcp>=0.1.0",
  "transformers>=4.57.0",
  "torch>=2.0.0",
  "huggingface-hub>=0.35.0",
  "pydantic>=2.0.0",
]

[project.scripts]
swe-pruner-mcp = "swe_pruner_mcp.server:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/swe_pruner_mcp"]

[tool.hatchling.build]
include = [
  "src/swe_pruner_mcp/**/*.py",
  "LICENSE",
  "README.md",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
